# some_tools

./: README.md  TransT.py  rufus314.7z
DM1_can_msg_send/: main.py
ZLG_测试/: ReadMe.md  zlg发送实例.py
img_merge_video/: img2v.py  v2img.py
json字幕转srt字幕/: Readme.md  pythontitle.py
miles_flash/: mileage_flash.py
nlohmann_json/: README.md
nlohmann_json/nlohman_json/: CMakeLists.txt  main.cpp
udp发送结构体测试/udp_test/: CMakeLists.txt
udp发送结构体测试/udp_test/message/: Client_msg.cpp  Server_msg.cpp  mes_arr.txt
udp发送结构体测试/upd_img/: upd_image.py  任务说明.docx
udp文件传输/: README.md
udp文件传输/Message_send/: CMakeLists.txt  receive_server.cpp  send_client.cpp
udp通信调试程序/udp_transmission/: CMakeLists.txt  README.md  client_img  client_msg  client_video  server_img  server_msg  server_video
udp通信调试程序/udp_transmission/command/: Client_cmd.cpp  Server_cmd.cpp
udp通信调试程序/udp_transmission/image/: Server_img.cpp
udp通信调试程序/udp_transmission/message/: Client_msg.cpp  Server_msg.cpp  msg.txt
udp通信调试程序/udp_transmission/script/: test_vehicle.sh
udp通信调试程序/udp_transmission/udp_transmission/: README.md
udp通信调试程序/udp_transmission/udp_transmission/command/: Client_cmd.cpp  Server_cmd.cpp
udp通信调试程序/udp_transmission/udp_transmission/image/: Server_img.cpp
udp通信调试程序/udp_transmission/udp_transmission/message/: Server_msg.cpp
udp通信调试程序/udp_transmission/udp_transmission/script/: equipment_simulation.sh  send_sim.sh  test_vehicle.sh
